@@ -33,7 +33,9 @@ interface:
 - added result value SCIP_NEWROUND that allows a separator/constraint handler to start a new separation round (without previous calls to other separators/conshdlrs)
 - implemented SCIPlpiGetPrimalRay() in SoPlex interface that has become available with SoPlex version 1.5.0.2
 - SCIPchgVarType got an extra boolean to store infeasibility while upgrading a variable from continuous type to an integer type
-- added function SCIPaddCoefLogicor() to add a variable to a logic or constraint 
+- added function SCIPaddCoefLogicor() to add a variable to a logic or constraint
+- new methods SCIPhasPrimalRay() and SCIPgetPrimalRayVal() that return whether a primal ray is stored and
+  which value a given variable has in the primal ray, respectively
 
 performance improvements:
 - performance improvements in prop_vbounds
@@ -54,6 +56,8 @@ fixed bugs:
 - fixed memory leak in reader_pip.c
 - fixed not correct merging of variable in logicor constraint handler and changed the name of the method to a common name used by other constraint handlers too(findPairsAndSets->mergeMultiples)
 - fixed bug which occured when changing a bound in the solving stage when this variables got upgraded from continuous to a integer type, where the bounds of this variable were still not integral; due to that SCIPchgVarType has changed(see above)
+- fixed bug which occured when the dual farkas multipliers were not available in the lpi because the LP could
+  only be solved with the primal simplex due to numerical problems
 
 plugins:
 - added vbound heuristic (heur_vbounds.{c,h})
